@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Broker {
        ~ executeCommand()
        ~ setCommand()
    }
  }
  

  namespace  {
    class BuyCommand {
        + execute()
        ~ BuyCommand()
    }
  }
  

  namespace  {
    interface Command {
        {abstract} + execute()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
    }
  }
  

  namespace  {
    class Option {
        - amount : int
        ~ Option()
        ~ buy()
        ~ sell()
    }
  }
  

  namespace  {
    class SellCommand {
        + execute()
        ~ SellCommand()
    }
  }
  

  Broker o-- Command : command
  BuyCommand .up.|> Command
  BuyCommand o-- Option : option
  SellCommand .up.|> Command
  SellCommand o-- Option : option


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
